# dashboard-backend

./: .env.sample  .gitignore  Dockerfile  README.md  compose-backend.yaml  compose-dev.yaml  compose-test.yaml  compose.yaml  docker-compose.yml  pyproject.toml  pytest.ini  requirements.txt
.github/: dependabot.yml
.github/workflows/: complexity.yml  lint.yml  test.yml
codeforces/: models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
codeforces/migrations/: 0001_initial.py  0002_codeforcessubmission_problem_rating.py
dashboard/: pyproject.toml  requirements.txt  settings.py  urls.py
dashboard/codeforces/: apps.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
dashboard/codeforces/management/commands/: init_pull.py
dashboard/codeforces/migrations/: 0001_initial.py
dashboard/dashboard/: celery.py  settings.py  urls.py
