[tool.poetry]
name = "dashboard"
version = "1.0.1"
description = ""
authors = ["Kazuki Kijima <kazukiyoshida96@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
poetry-plugin-export = "^1.8.0"
psycopg2-binary = "^2.9.9"
httpx = "^0.27.0"
celery = "^5.4.0"
django-celery-beat = "^2.7.0"
redis = "^5.0.8"
django-cors-headers = "^4.3.1"
djangorestframework = "^3.15.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-django = "^4.9.0"
pytest-mock = "^3.14.0"
django-extensions = "^3.2.3"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "dashboard.settings"
python_files = ["tests.py"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
